# ResearchRAG

./: .env  README.md  deploy.ps1  deploy.sh  docker-compose.yml
.github/workflows/: ci-cd.yml  dependencies.yml
backend/: .env.example  Dockerfile  README.md  init_db.py  main.py  pyproject.toml  requirements.txt  start_backend.bat  start_backend.sh
backend/app/core/: config.py  database.py  security.py
backend/app/models/: database.py  schemas.py  user.py
backend/app/routers/: agents.py  analysis.py  auth.py  calendar.py  citations.py  documents.py  drafting.py  metadata.py  search.py
backend/app/services/: auth_service.py  gemini_service.py  rag_pipeline.py  vector_service.py
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  start_frontend.bat  tailwind.config.js
frontend/src/: App.tsx  AppWrapper.tsx  index.css
frontend/src/components/: AuthPage.tsx  CalendarPage.tsx  CaseAnalysisPage.tsx  DashboardLayout.tsx  DashboardPage.tsx  DocumentDraftingPage.tsx  DocumentUpload.tsx  EnhancedAuthPage.tsx  Layout.tsx  ModernDashboard.tsx  RAGInterface.tsx  SearchView.tsx
frontend/src/services/: legalApi.ts
frontend/src/store/: legalStore.ts
k8s/: backend.yaml  config.yaml  frontend.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml
monitoring/: alerts.yml  prometheus.yml
